<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lighthouse_sensor_model</name>
  <version>0.1.0</version>
  <description>Lighthouse sensor model library for Beluga-based localization</description>
  <maintainer email="maintainer@ekumen.com">Ekumen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>beluga</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
